Updates to get the corba binding unit tests working (I svn rm'd a bunch of things that need to be system tests, will restore them to systests soon)
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@619530 13f79535-47bb-0310-9956-ffa450edef68